# poetry-module-test

./: .gitignore  README.md  main.py  pyproject.toml
_shared/: .flake8  README.md  justfile  pyproject.toml
_shared/server_shared/: __init__.py
_shared/server_shared/db/: module1.py
_shared/server_shared/redis/: redis_client.py
_shared/src/server_shared/: __init__.py
_shared/tests/: test_redis.py  test_shared.py
tests/: test_shared.py  test_shared_redis.py
